gcc/testsuite/rust/rustc/ui/parser/doc-before-extern-rbrace.rs
fn main() {}

extern {
    /// hi
// { dg-error ".E0584." "" { target *-*-* } .-1 }
}

